--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: aquamarine;
+  background-color: rgb(245, 25, 25);
 }
 </style>
 </head>
