add css and modify css

--- a/index.html
+++ b/index.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Jay Cris Profile</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(245, 25, 25);
-}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Jay Cris - Full Stack Developer</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>My Websitessssss</h1>
-<p>A website created by me.</p>
+  <header>
+    <h1>Welcome to Jay Cris' Portfolio</h1>
+    <p>Full Stack Developer | C# Backend | HTML, CSS, JavaScript, jQuery Frontend</p>
+  </header>
 
+  <section class="about">
+    <h2>About Me</h2>
+    <p>Hello! I'm Jay Cris, a passionate full-stack developer. I specialize in C# for backend development and work with modern frontend technologies such as HTML, CSS, JavaScript, and jQuery to create dynamic and user-friendly websites.</p>
+  </section>
+
+  <section class="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>C# - Backend Development</li>
+      <li>HTML, CSS, JavaScript, jQuery - Frontend Development</li>
+      <li>Database Management (SQL, MySQL, etc.)</li>
+      <li>Version Control (Git, GitHub)</li>
+      <li>REST APIs and Web Services</li>
+    </ul>
+  </section>
+
+  <section class="projects">
+    <h2>Projects</h2>
+    <p>Check out some of my projects below:</p>
+    <!-- Add your project links here -->
+    <ul>
+      <li><a href="#">Project 1: E-commerce Website</a></li>
+      <li><a href="#">Project 2: Task Manager App</a></li>
+      <li><a href="#">Project 3: Blog System</a></li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>Contact me: <a href="mailto:jaycris@example.com">jaycris@example.com</a></p>
+  </footer>
 </body>
 </html>
