--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <link rel="stylesheet" href="css/owl.theme.default.min.css">
 
      <!-- MAIN CSS -->
-     <link rel="stylesheet" href="css/tooplate-style.css">
+     <link rel="stylesheet" href="css/style.css">
 
 </head>
 
